css: Fix bloglist title anchor hover on mobile

--- a/sass/skins/vibrance.sass
+++ b/sass/skins/vibrance.sass
@@ -120,6 +120,8 @@ a:not(.no-hover-padding)::before
     background-color: inherit
   .home-title:not(.no-hover-padding)::before
     background-color: inherit
+  .bloglist-row .bloglist-content .bloglist-title a:hover
+    color: var(--text-color-high-contrast)
 
 @media (pointer: fine)
   .pswp__caption:hover
